# SecretKeyRandomizer

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  build_exe.py  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  main.py
app/cli/: __init__.py  commands.py
app/core/: __init__.py  display.py  encoders.py  entropy.py  formatters.py  generator.py  models.py  presets.py  validators.py
app/ui/: main_window.py  theme.py  widgets.py
docs/: packaging.md  security.md  usage.md  windows-install.md
scripts/: build-release.ps1  setup-dev.ps1
tests/: conftest.py  test_cli.py  test_encoders.py  test_entropy.py  test_formatters.py  test_generator.py  test_presets.py  test_ui_smoke.py  test_v1_generation.py  test_validators.py
