[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "secretkeyrandomizer"
version = "0.1.0"
description = "A small PySide6 desktop utility for generating high-entropy secrets."
requires-python = ">=3.12"
dependencies = [
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
